--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -6,7 +6,13 @@ body {
 main {
   flex: 1 0 auto; }
 
+.nav-wrapper {
+  z-index: 100; }
+
 .compLinks {
   margin: 1.168rem 0 1.168rem 0; }
+
+.carousel-item h2 {
+  margin-top: 200px; }
 
 /*# sourceMappingURL=custom.css.map */
