--- a/style/sass/custom.scss
+++ b/style/sass/custom.scss
@@ -4,8 +4,17 @@ body {
   flex-direction: column;  }
 
 main {
-  flex: 1 0 auto;}
+  flex: 1 0 auto;
+}
+
+.nav-wrapper{
+  z-index: 100;
+}
 
 .compLinks {
   margin: 1.168rem 0 1.168rem 0;
+}
+
+.carousel-item h2 {
+  margin-top: 200px;
 }
