Shopping cart finalized, news creation updated with subtitle. Cant think of more

--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -15,5 +15,9 @@ main {
 .carousel-item h2 {
   margin-top: 200px; }
 
+.strong-text {
+  font-weight: bold;
+}
+
 
 /*# sourceMappingURL=custom.css.map */
