Working searchbare functionality implemented

--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -15,9 +15,7 @@ main {
 .carousel-item h2 {
   margin-top: 200px; }
 
-.strong-text {
-  font-weight: bold;
-}
-
+#form1 {
+  margin-left: 200px; }
 
 /*# sourceMappingURL=custom.css.map */
