Moved gate to backdex, new font and search functionality is now in a modal

--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -1,3 +1,4 @@
+html { font-family: 'Oswald', sans-serif; }
 body {
   display: flex;
   min-height: 100vh;
@@ -14,8 +15,5 @@ main {
 
 .carousel-item h2 {
   margin-top: 200px; }
-
-#form1 {
-  margin-left: 200px; }
 
 /*# sourceMappingURL=custom.css.map */
