new colors and stuff

--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -16,4 +16,9 @@ main {
 .carousel-item h2 {
   margin-top: 200px; }
 
-/*# sourceMappingURL=custom.css.map */
+.strongtext {
+  font-weight: bold;
+}
+.dropdown-content li>a, .dropdown-content li>span {
+  color: #5c6bc0;!important;
+}
